--- a/assets/scss/setup/mixins/_button.scss
+++ b/assets/scss/setup/mixins/_button.scss
@@ -56,28 +56,77 @@
   transition: var(--current-button-transition);
 }
 
-@mixin button-fill-base {
+@mixin button-fill-base($pseudo: true) {
   background-color: transparent;
-  background-size: calc( 200% + 4 * var(--theme-button-border-width) ) calc( 100% + 4 * var(--theme-button-border-width) );
-  background-position: calc( 100% + var(--theme-button-border-width) ) calc( -1 * var(--theme-button-border-width) );
+  transform: translateZ(0);
+  will-change: transform;
+  backface-visibility: hidden;
 
-  &:hover {
-    background-position: calc( -1 * var(--theme-button-border-width) ) calc( -1 * var(--theme-button-border-width) );
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: calc(100% + var(--theme-button-border-width));
+    will-change: transform;
+    -webkit-backface-visibility: hidden;
+    transition: var(--current-button-transition);
+    transition-property: transform;
+    z-index: -1;
+  }
+
+  @if $pseudo == false {
+    background-color: transparent;
+    background-size: calc( 200% + 4 * var(--theme-button-border-width) ) calc( 100% + 4 * var(--theme-button-border-width) );
+    background-position: calc( 100% + var(--theme-button-border-width) ) calc( -1 * var(--theme-button-border-width) );
+
+    &:hover {
+      background-position: calc( -1 * var(--theme-button-border-width) ) calc( -1 * var(--theme-button-border-width) );
+    }
   }
 }
 
-@mixin button-fill {
-  @include button-fill-base;
-  background-image: linear-gradient(to right, var(--theme-button-hover-background-color) 50%, var(--theme-button-background-color) 50%);
+@mixin button-fill($pseudo: true) {
+  @include button-fill-base($pseudo);
+  &:after {
+    transform: scale3d(1,1,1);
+    transform-origin: right;
+    background-color: var(--theme-button-background-color);
+  }
+
+  &:hover:after {
+    transform: scale3d(0,1,1);
+  }
+
+  @if $pseudo == false {
+    background-image: linear-gradient(to right, var(--theme-button-hover-background-color) 50%, var(--theme-button-background-color) 50%);
+  }
 }
 
-@mixin button-fill-reverse {
-  @include button-fill-base;
+@mixin button-fill-reverse($pseudo: true) {
+  @include button-fill-base($pseudo);
   --current-button-text-color: var(--theme-button-hover-text-color);
-  background-image: linear-gradient(to left, var(--theme-button-hover-background-color) 50%, var(--theme-button-background-color) 50%);
+  &:after {
+    transform: scale3d(0,1,1);
+    transform-origin: left;
+    background-color: var(--theme-button-background-color);
+  }
 
   &:hover {
     --current-button-text-color: var(--theme-button-text-color);
+    &:after {
+      transform: scale3d(1,1,1);
+    }
+  }
+
+  @if $pseudo == false {
+    --current-button-text-color: var(--theme-button-hover-text-color);
+    background-image: linear-gradient(to left, var(--theme-button-hover-background-color) 50%, var(--theme-button-background-color) 50%);
+
+    &:hover {
+      --current-button-text-color: var(--theme-button-text-color);
+    }
   }
 }
 
